<resources>
    <string name="app_name">Nyatrik Sunda</string>
    <string name="about_title">
        "Sampurasun!"
    </string>
    <string name="about_mandala">
        "\nPerkenalkan kami dari tim pengembangan Aplikasi Nyatrik."
        "\n\nMandala merupakan aplikasi pengajaran bahasa Sunda."
        "Kamu bisa belajar banyak hal tentang bahasa Sunda mulai dari aksara Sunda, "
        "kata sehari-hari dalam bahasa Sunda, dan masih banyak lagi."
        "Kamu juga bisa bermain games yang bakal membantu kamu dalam mempelajari bahasa Sunda."
        "\n\nMandala juga punya figur yang lucu loh, namanya Macan Dala. Bersama Macan Dala, yuk kita belajar bahasa Sunda!"
        "\n\n\nTim Pengembang:\nAdnan J. Y.\nSatrio S. A.\nM. Jordiansyah\nM. Ihza T.\nBeryl C. H."
        "\n\nDosen Pembimbing:\nErick Paulus"
    </string>
    <string name="action_settings">Settings</string>
    <string name="text_home">Home Fragment</string>
    <string name="text_notifications">Notifications Fragment</string>
    <string name="text_search">Search Fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="introTitle">Aksara Sunda</string>
    <string name="introText1">
        Aksara Sunda adalah sejumlah bentuk ortografi hasil kreativitas orang Sunda yang memiliki sistem penulisan untuk merekam suatu bahasa, di antaranya bahasa Sunda.
    \nAksara yang ditampilkan pada aplikasi ini merupakan aksara Sunda hasil standarisasi para ahli berdasarkan sejumlah aksara pada prasasti dan naskah Sunda Kuno untuk didaftarkan ke Unicode.
    \nLembaga konsorsium internasional itu membantu aksara Sunda supaya bisa diakses di setiap platform komputer.
    \nPada April 2008, Unicode mempublikasikan pada laman websitenya bahwa aksara Sunda sudah sejajar dengan aksara lain di seluruh dunia dan sudah bisa digunakan pada setiap platform komputer.
    \nAksara Sunda bersifat silabik, yakni tulisan yang dapat mewakili sebuah kata dan suku kata.</string>
    <string name="introSubtitle1">Struktur Umum Aksara Sunda</string>
    <string name="introText2">
    Aksara Sunda terdiri dari aksara swara (vokal mandiri), ngalagena (konsonan), tanda rarangkén (vokalisasi/harkat), dan angka.
    </string>
    <string name="introSubtitle2">Aksara Swara</string>
    <string name="introText3">
        Aksara swara adalah sistem ortografi yang melambangkan bunyi fonem vokal mandiri yang berperan sebagai suku kata yang bisa menempati posisi awal, tengah, maupun akhir sebuah kata.
        \nTerdapat 7 buah aksara swara, yakni:
    </string>
    <string name="introSubtitle3">Aksara Ngalagena</string>
    <string name="introText4">
        Aksara ngalagena adalah sistem ortografi yang melambangkan bunyi fonem konsonan dan berperan sebagai suku kata maupun kata yang bisa menempati posisi awal, tengah maupun akhir sebuah kata.
        \nTerdapat 23 buah aksara ngalagena, yakni:
    </string>
    <string name="introSubtitle4">Rarangkén</string>
    <string name="introText5">
        Rarangkén adalah penanda bunyi yang berfungsi seperti harkat dalam aksara Arab untuk mengubah, menambah, maupun menghilangkan bunyi vokal “A”  pada aksara ngalagena.
        \nTerdapat 13 bentuk ortografi rarangkén, yakni:
    </string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password terlalu pendek, masukkan minimum 6 karakter!</string>
    <string name="auth_failed">Autentikasi gagal, cek email dan password kembali!</string>
    <string name="change_email">Ubah Email</string>
    <string name="change_password">Ubah Password</string>
    <string name="send_password_reset_email">Kirim email untuk reset Password</string>
    <string name="remove_user">Hapus user</string>
    <string name="new_pass">Password Baru</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nama</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Bukan member? Silakan registrasi di sini!</string>
    <string name="btn_link_to_login">Sudah teregistrasi, masuk di sini!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Lupa password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">Email Baru</string>
    <string name="btn_change">Ubah</string>
    <string name="btn_send">Kirim</string>
    <string name="btn_remove">Hapus</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="lbl_forgot_password">Lupa password?</string>
    <string name="forgot_password_msg">Kami hanya perlu email yang teregistrasi untuk mengirim anda instruksi untuk mereset password.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="swara" translateable="false">
        <item>a</item>
        <item>é</item>
        <item>i</item>
        <item>o</item>
        <item>u</item>
        <item>e</item>
        <item>eu</item>
    </string-array>
    <string-array name="swaraAksara" translateable="false">
        <item>ᮃ</item>
        <item>ᮄ</item>
        <item>ᮅ</item>
        <item>ᮆ</item>
        <item>ᮇ</item>
        <item>ᮈ</item>
        <item>ᮉ</item>
    </string-array>
    <string-array name="ngalagena">
        <item>ka</item>
        <item>ga</item>
        <item>nga</item>
        <item>ca</item>
        <item>ja</item>
        <item>nya</item>
        <item>ta</item>
        <item>da</item>
        <item>na</item>
        <item>pa</item>
        <item>ba</item>
        <item>ma</item>
        <item>ya</item>
        <item>ra</item>
        <item>la</item>
        <item>wa</item>
        <item>sa</item>
        <item>ha</item>
        <item>fa</item>
        <item>qa</item>
        <item>va</item>
        <item>xa</item>
        <item>za</item>
    </string-array>
    <string-array name="ngalagenaAksara">
        <item>ᮊ</item>
        <item>ᮌ</item>
        <item>ᮍ</item>
        <item>ᮎ</item>
        <item>ᮏ</item>
        <item>ᮑ</item>
        <item>ᮒ</item>
        <item>ᮓ</item>
        <item>ᮔ</item>
        <item>ᮕ</item>
        <item>ᮘ</item>
        <item>ᮙ</item>
        <item>ᮚ</item>
        <item>ᮛ</item>
        <item>ᮜ</item>
        <item>ᮝ</item>
        <item>ᮞ</item>
        <item>ᮠ</item>
        <item>ᮖ</item>
        <item>ᮋ</item>
        <item>ᮗ</item>
        <item>ᮟ</item>
        <item>ᮐ</item>
    </string-array>
    <string-array name="rarangken">
        <item>ki</item>
        <item>ku</item>
        <item>ké</item>
        <item>ko</item>
        <item>ke</item>
        <item>keu</item>
        <item>kar</item>
        <item>kang</item>
        <item>kah</item>
        <item>kya</item>
        <item>kla</item>
        <item>kra</item>
        <item>k</item>
    </string-array>
    <string-array name="rarangkenAksara">
        <item>ᮊ</item>
        <item>ᮊ</item>
        <item>ᮊᮦ</item>
        <item>ᮊᮧ</item>
        <item>ᮊ</item>
        <item>ᮊᮩ</item>
        <item>ᮊᮁ</item>
        <item>ᮊᮀ</item>
        <item>ᮊᮂ</item>
        <item>ᮊᮡ</item>
        <item>ᮊᮣ</item>
        <item>ᮊ</item>
        <item>ᮊ᮪</item>
    </string-array>
    <string-array name="aksaraLesson1">
        <item>Di pelajaran ini, kita akan belajar 7 aksara swara, yakni "a", "é", "i", "o", "u", "e", "eu".</item>
        <item>Di pelajaran ini, kita akan belajar 3 aksara ngalagena, yakni "Ka", "Ga", dan "Nga".</item>
        <item>Di pelajaran ini, kita akan belajar 3 aksara ngalagena, yakni "Ca", "Ja", dan "Nya".</item>
        <item>Di pelajaran ini, kita akan belajar 3 aksara ngalagena, yakni "Ta", "Da", dan "Na".</item>
        <item>Di pelajaran ini, kita akan belajar 3 aksara ngalagena, yakni "Pa", "Ba", dan "Ma".</item>
        <item>Di pelajaran ini, kita akan belajar 3 aksara ngalagena, yakni "Ya", "Ra", dan "La".</item>
        <item>Di pelajaran ini, kita akan belajar 3 aksara ngalagena, yakni "Wa", "Sa", dan "Ha".</item>
        <item>Di pelajaran ini, kita akan belajar 5 aksara ngalagena, yakni "Fa", "Qa", "Va", "Xa", dan "Za".</item>
    </string-array>
    <string-array name="aksaraLesson2">
        <item>Dalam ejaan bahasa Sunda, é, e, dan eu memiliki pengucapan yang berbeda-beda.
            \nPengucapan "é" (taling) caranya dengan menarik pipi sehingga bibir seperti tersenyum.
            \nPengucapan "e" (pepet) sama dengan pengucapan vokal "e" (pepet) pada kata-kata bahasa Indonesia.
            \nPengucapan "eu" caranya dengan kepala agak didongakkan ke atas, seperti kita hendak sendawa.
            \nCoba dengarkanlah suara pengucapannya masing-masing agar terlihat perbedaannya.
        </item>
        <item>
            Sebenarnya, aksara Sunda Ka, Ga, dan Nga merupakan bentuk konsonan yang mirip dengan huruf Latin: "k", "g", dan "ng".
            \nDalam ejaan bahasa Indonesia, ketiga huruf tersebut masing-masing dibaca "ka", "ge", dan "eng".
        </item>
        <item>
            Sebenarnya, aksara Sunda Ca, Ja, dan Nya adalah merupakan bentuk konsonan yang mirip dengan huruf Latin:  "c", "j", dan "ny".
            \nDalam ejaan bahasa Indonesia, ketiga huruf tersebut masing-masing dibaca "ce", "je", dan "eny".
        </item>
        <item>Sebenarnya, aksara Sunda Ta, Da, dan Na adalah bentuk vokalisasi dari konsonan "t", "d", dan "n".
            \nHal ini mirip seperti vokalisasi konsonan dalam bahasa Indonesia seperti "te", "de", dan "en"</item>
        <item>Sebenarnya, aksara Sunda Pa, Ba, dan Ma adalah bentuk vokalisasi dari konsonan "p", "b", dan "m".
            \nHal ini mirip seperti vokalisasi konsonan dalam bahasa Indonesia seperti "pe", "be", dan "em"</item>
        <item>Sebenarnya, aksara Sunda Ya, Ra, dan La adalah bentuk vokalisasi dari konsonan "y", "r", dan "l".
            \nHal ini mirip seperti vokalisasi konsonan dalam bahasa Indonesia seperti "ye", "er", dan "el"</item>
        <item>Sebenarnya, aksara Sunda Wa, Sa, dan Ha adalah bentuk vokalisasi dari konsonan "w", "s", dan "h".
            \nHal ini mirip seperti vokalisasi konsonan dalam bahasa Indonesia seperti "we", "es", dan "ha"</item>
        <item>Sebenarnya, aksara Sunda Fa, Qa, Va, Xa, dan Za adalah bentuk vokalisasi dari konsonan "f", "q", "v", "x", dan "z".
            \nHal ini mirip seperti vokalisasi konsonan dalam bahasa Indonesia seperti "ef", "qi", "ve", "ex", dan "zet".
            \nLima aksara Sunda tersebut merupakan aksara Ngalagena dari bunyi serapan.
            \nLambang aksara fa dan va merupakan varian lambang aksara pa; lambang aksara qa dan xa adalah varian lambang aksara ka; lambang aksara za adalah varian lambang aksara ja.</item>
    </string-array>
</resources>