<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/introTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introTitle"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/introText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introText1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/introLatin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ka"
                    android:background="@drawable/button_bg"
                    android:layout_margin="4dp"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/introLatinNote"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="Ini adalah karakter latin"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimaryDark"
                    android:layout_margin="4dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ka"
                    android:layout_margin="4dp"
                    android:maxHeight="100dp"
                    android:maxWidth="100dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:contentDescription="Aksara"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="Ini adalah aksara Sunda"
                    android:textColor="@color/white"
                    android:layout_margin="4dp"
                    />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/introSubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introSubtitle1"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/introText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introText2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/introSubtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introSubtitle2"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/introText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introText3" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">

            </LinearLayout>
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="horizontal">-->

                <!--<Button-->
                    <!--android:id="@+id/buttona"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="6dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/button_bg"-->
                    <!--android:text="a" />-->

                <!--<Button-->
                    <!--android:id="@+id/buttoni"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="6dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/button_bg"-->
                    <!--android:text="i" />-->

                <!--<Button-->
                    <!--android:id="@+id/buttonu"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="6dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/button_bg"-->
                    <!--android:text="u" />-->

                <!--<Button-->
                    <!--android:id="@+id/buttoné"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="6dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/button_bg"-->
                    <!--android:text="é" />-->

                <!--<Button-->
                    <!--android:id="@+id/buttono"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="6dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/button_bg"-->
                    <!--android:text="o" />-->

                <!--<Button-->
                    <!--android:id="@+id/buttone"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="6dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/button_bg"-->
                    <!--android:text="e" />-->

                <!--<Button-->
                    <!--android:id="@+id/buttoneu"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="6dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/button_bg"-->
                    <!--android:text="eu" />-->


            <!--</LinearLayout>-->

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView android:id="@+id/introSubtitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introSubtitle3"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/introText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introText4" />

            <LinearLayout
                android:id="@+id/ngalagena1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ngalagena2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ngalagena3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/introSubtitle4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introSubtitle4"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/introText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introText5" />

            <LinearLayout
                android:id="@+id/rarangken1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rarangken2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </LinearLayout>
            <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonatas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:text="ATAS" />

                <Button
                    android:id="@+id/buttonsejajar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:text="SEJAJAR" />

                <Button
                    android:id="@+id/buttonbawah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:text="BAWAH" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:text="Atas"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:text="Sejajar"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:text="Bawah"
                    android:gravity="center"/>

            </LinearLayout>
-->
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>